# ur5e_surface_path

./: CMakeLists.txt  README.md  package.xml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ur5e_surface_path/lib/ur5e_surface_path/: hello_moveit  trace_cube
install/ur5e_surface_path/share/ament_index/resource_index/parent_prefix_path/: ur5e_surface_path
install/ur5e_surface_path/share/ur5e_surface_path/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ur5e_surface_path/share/ur5e_surface_path/cmake/: ur5e_surface_pathConfig.cmake
install/ur5e_surface_path/share/ur5e_surface_path/urdf/: ur5e_cube.urdf.xacro
launch/: ur5e_cube_moveit.launch.py
log/: latest_build
meshes/: 50cmCube.stl  bowl_surface.stl  cube_50cm.pcd  final_sor_ror_bilateral.ply  final_sor_ror_bilateral.txt  pointCloud.py  sor_only.ply  tinkercadCube.stl
src/: hello_moveit.cpp  pathPlanning.cpp  pointCloudOperations.cpp  reconstruct_mesh.py  trace_cube.cpp  trace_cube.hpp  trianglesOperations.cpp
urdf/: ur5e_cube.urdf.xacro
